--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-webpack": "^1.3.1",
     "react-tools": "^0.12.1",
     "sass-loader": "^0.3.1",
+    "source-map-loader": "^0.1.3",
     "style-loader": "^0.8.2",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
